# experiments-c

./: .gitignore  CMakeLists.txt  CatchTests.cpp  FileWordCount.cpp  NamedType.h  README.md  assign_derived_classes.cpp  catch_example.cpp  catch_main.cpp  catch_other.cpp  catch_tests.h  conanfile.txt  condition_variable_ping_pong.cpp  condition_variables.cpp  const_non_const.cpp  cu_ordering_test.cpp  cu_ordering_test2.cpp  cutrace.h  fmt.cpp  func_perf.cpp  func_perf_funcs.cpp  grandchild_override.cpp  is_detected.cpp  is_detected.h  main.cpp  make_overload.h  match.h  match_hana.h  myGuard.cpp  numeric_range.cpp  numeric_range.h  overloaded.cpp  pimpl_100.cpp  pimpl_100_widget.cpp  pimpl_100_widget.h  pimpl_101.cpp  pimpl_101_h.h  pimpl_101_impl.h  pimpl_101_widget.cpp  pimpl_101_widget.h  (+21 more)
caf/: CMakeLists.txt  caf_test.cpp  pingpong.proto
cmake/: CatchAddTests.cmake  tw-Catch.cmake
common/: BaseMessage.h  BaseMessageFactory.h  CMakeLists.txt  ClientRegistrarCallbacks.h  ClientSettings.h  ConnectionInfo.h  ConnectionNotifier.h  Envelope.cpp  Envelope.h  Envelope.proto  Error.h  Exceptions.h  Expected.h  IdGenerator.h  MessageFactory.h  PingPong.cpp  PingPong.h  PingPong.proto  Registration.cpp  Registration.h  Registration.proto  ScopedThread.h  ServerType.h  ThreadResource.h  scope_guard.h
common/test/: CMakeLists.txt  EnvelopeTest.cpp  ExpectedTest.cpp  PingPongTest.cpp  RegistrationTest.cpp  ScopedThreadTest.cpp  main.cpp  main.h
gaffer/: CMakeLists.txt  example.cpp  net.h  test.cpp
grpc/: CMakeLists.txt  README.md  greeter_client.cc  greeter_combined.cc
zmq/: CMakeLists.txt  echoserver.cpp  stream.cpp
